--- a/q/275350.html
+++ b/q/275350.html
@@ -26,10 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
+<tr d-ix="0"><td>106</td><td>[Maple]</td><td>240904T165842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275354#275354">Sophia A</a></td></tr>
+<tr d-ix="1"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 15 </s> 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>[Maple], 106 [bytes]</h1>
+<p>For n = 7 returns {2, 3, 7, 13, 43, 139, 547} in 0.5 seconds.</p>
+<p><code>a:=proc(n)p:=1;w:={};for k to n do p:=p^2+p;{seq(x[1],x=ifactors(p)[2])}minus w;w:=w union{min(%)}od end:</code></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 15 </s> 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p><sup>I'm not convinced this is as terse as possible.</sup></p>
 <pre><code>1‘×$Ð¡ÆfḟṂṭɗ@/
 </code></pre>
@@ -52,7 +57,7 @@
           ṭ    -       tack to {left}
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 15 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 15 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <p><sup>I'm not convinced this is as terse as possible.</sup></p>
 <pre><code>Çö╫k1,`♠y&amp;∞ìσ▀╕
 </code></pre>
