--- a/q/275350.html
+++ b/q/275350.html
@@ -26,19 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>099</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
+<tr d-ix="0"><td>094</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
 <tr d-ix="1"><td>106</td><td>[Maple]</td><td>240904T165842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275354#275354">Sophia A</a></td></tr>
 <tr d-ix="2"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
 <tr d-ix="3"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 99 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 94 bytes</h1>
 <p><sup>I'm <em>really</em> not convinced this is as terse as possible.</sup></p>
 <p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint.</p>
-<p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(10)\$</span> in approximately 23 seconds on TIO.</p>
+<p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(12)\$</span> almost instantly.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(n,g=n=&gt;x=n?g(~-n)*-~x:k,k=1n,x)=&gt;{for(g(n);x%++k||!(x/=k,g=z=&gt;!--z||k-f(z)&amp;&amp;g(z))(n););return k}
+<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,d=[],v=(h=k=&gt;y%++k||d.includes((y/=k,k))?h(k):k)(1n,y=x))=&gt;--n?f(n,x*-~x,[...d,v]):v
 </code></pre>
-<p><a href="https://tio.run/##FYxBDoIwFET3nqIkSPqFqmytH68CQWi05NcUNA20XB3LZmYW7827@TVja1@fSZB5dtvWI6dCIWHlkB6Kr4LgJFZ304XGkgoHWC29sVxxAumOea69T7i7oI7ajFUixOy9Fj2fIctUTNhJkLabvpaYDtuuD93EiCErSca@x3HdV54DWw6MtYZGM3TnwSheNzxdKECk06WPZ6EGeQjbHw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FYzBDkNAFADvvmIPmrxXaxuO9OmHiIRYSlfeNrRC0F9XTjOHybyKsRjKvn1/fLa62veagOVEIUtNaSZHgoYMJfPF88y6atVy2X11NQDMNzLSID4aMBgZhIDlTBMiJb7Pj/r8XP3fJFOllJZjhtG417aHrvoIFiQCjg/eDwlP8zwUiyNEaXmwXaU6@4S8AHfhDY/aXY4jbjnGzrb/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>[Maple], 106 [bytes]</h1>
 <p>For n = 7 returns {2, 3, 7, 13, 43, 139, 547} in 0.5 seconds.</p>
