--- a/q/275350.html
+++ b/q/275350.html
@@ -26,13 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>Charcoal</td><td>240904T185258Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275356#275356">Neil</a></td></tr>
-<tr d-ix="1"><td>076</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
+<tr d-ix="0"><td>076</td><td>JavaScript ES11</td><td>240904T171431Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275355#275355">Arnauld</a></td></tr>
+<tr d-ix="1"><td>027</td><td>Charcoal</td><td>240904T185258Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275356#275356">Neil</a></td></tr>
 <tr d-ix="2"><td>106</td><td>[Maple]</td><td>240904T165842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275354#275354">Sophia A</a></td></tr>
 <tr d-ix="3"><td>014</td><td>Jelly</td><td>240904T150642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275352#275352">Jonathan</a></td></tr>
 <tr d-ix="4"><td>015</td><td>Stax</td><td>240904T162249Z</td><td><a href="https://codegolf.stackexchange.com/questions/275350/sylvester-primes/275353#275353">Khuldrae</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 76 bytes</h1>
+<p><sup>I'm not convinced this is as terse as possible.</sup></p>
+<p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint. This assumes that Sylvester's sequence is squarefree, which is an unresolved problem (<a href="https://tio.run/##FYxBCoMwFET3niILC/k1aalL7deDiKBYbdqEn6ISFNGrp3E1b4aZ@baunbrx85sl2Vfv/YCcxIIpCYUai/WiS8XloSFT1XpHLXQdgmC1cKh46K24AGAhJZXDub3KYxGqcjUqyJwf7MhNPzNiyB6UB30GSE9KEmBbxFhnabKmvxn75k3L4412CO14C3@wN5BHu/8D" rel="nofollow noreferrer">+4 bytes</a> for a safe version).</p>
+<p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(12)\$</span> almost instantly.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=k=&gt;y%++k||h[y/=k,k]?h(k):k,v=h(1n,y=x))=&gt;--n?f(n,x*-~x,h[v]=h):v
+</code></pre>
+<p><a href="https://tio.run/##FYzBDoIwEAXvfEUPmHRt0cARXPgQQgJBsFqyNUAaCOCv13KaOcx7n8Y2Uzu@v3NE5tk51yMnuWBCUqHGfL0IofddlesdtdRVobiGVEuLisckV1wAMI8iKvpzd41@i1SlrVBBal1vRj50MyOGLKbM8@ElOU0IYFvAWGtoMkN3G8yL1w0PNzrA1@Hm/@CoIQsO9wc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
 <pre><code>≔¹ηＦＮ«≧×⊕ηη⊞υ²Ｗ﹪ηΠυ⊞υ⊕⊟υ»Ｉυ
 </code></pre>
 <p><a href="https://tio.run/##TYy9CsIwFEbn5inueANxqODUSZw6VIL4AjGNTSBNQn50EJ891hbB7Tt8hyO1iNILW@sxJTM5bBlo2pG7j4C9CyWfy3xTESmFF2kGETbvYiad8WpmlRj0TkY1K5fViJpugYaXpLEw2H/hqY1VgIMfi/WoGfC4TJmx0CX8U/873If17Mib8GhcxpNIq9/V2h7q7mE/" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Can calculate up to <code>n=18</code> on TIO. Explanation: Assumes without proof that Sylvester's sequence is square-free.</p>
@@ -57,15 +66,6 @@
 <pre><code>»Ｉυ
 </code></pre>
 <p>Output the primes.</p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES11), 76 bytes</h1>
-<p><sup>I'm not convinced this is as terse as possible.</sup></p>
-<p>Expects a Bigint <span class="math-container">\$n\$</span> and returns <span class="math-container">\$a(n)\$</span> as another Bigint.</p>
-<p>Computes <span class="math-container">\$a(1)\$</span> to <span class="math-container">\$a(12)\$</span> almost instantly.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=k=&gt;y%++k||h[y/=k,k]?h(k):k,v=h(1n,y=x))=&gt;--n?f(n,x*-~x,h[v]=h):v
-</code></pre>
-<p><a href="https://tio.run/##FYzBDoIwEAXvfEUPmHRt0cARXPgQQgJBsFqyNUAaCOCv13KaOcx7n8Y2Uzu@v3NE5tk51yMnuWBCUqHGfL0IofddlesdtdRVobiGVEuLisckV1wAMI8iKvpzd41@i1SlrVBBal1vRj50MyOGLKbM8@ElOU0IYFvAWGtoMkN3G8yL1w0PNzrA1@Hm/@CoIQsO9wc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>[Maple], 106 [bytes]</h1>
 <p>For n = 7 returns {2, 3, 7, 13, 43, 139, 547} in 0.5 seconds.</p>
