--- a/q/275303.html
+++ b/q/275303.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>C# .NET 6+</td><td>240904T120218Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275348#275348">Arkane</a></td></tr>
-<tr d-ix="1"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
-<tr d-ix="2"><td>058</td><td>Charcoal</td><td>240903T222310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275337#275337">Neil</a></td></tr>
-<tr d-ix="3"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
+<tr d-ix="0"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>C# .NET 6+</td><td>240904T120218Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275348#275348">Arkane</a></td></tr>
+<tr d-ix="2"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="3"><td>058</td><td>Charcoal</td><td>240903T222310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275337#275337">Neil</a></td></tr>
 <tr d-ix="4"><td>134</td><td>Go</td><td>240903T191837Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275332#275332">bigyihsu</a></td></tr>
 <tr d-ix="5"><td>120</td><td>Retina 0.8.2</td><td>240903T175255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275330#275330">Neil</a></td></tr>
 <tr d-ix="6"><td>nan</td><td>Ruby</td><td>240903T084423Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275317#275317">G B</a></td></tr>
@@ -38,7 +38,28 @@
 <tr d-ix="9"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
 <tr d-ix="10"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C# (.NET 6+), 114 bytes (function) or 163 bytes (program)</h1>
+<div id="pu0" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
+<pre><code>m=require('moment')
+f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
+</code></pre>
+<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
+<p>Sorry no TIO, don't know how to import <code>momentjs</code> there. Only ran full tests in the browser + Google Apps Script (V8). The snippet below seems to work though (thanks Neil!)</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>m = moment
+
+f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
+
+document.write(f('00', '01', '01') + '&lt;br /&gt;')
+document.write(f('01', '01', '31') + '&lt;br /&gt;')
+document.write(f('31', '01', '01') + '&lt;br /&gt;')
+document.write(f('01', '02', '29') + '&lt;br /&gt;')</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"&gt;&lt;/script&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>C# (.NET 6+), 114 bytes (function) or 163 bytes (program)</h1>
 <pre class="lang-cs prettyprint-override"><code>var f=(string s)=&gt;new[]{&quot;yyMMdd&quot;,&quot;MMddyy&quot;,&quot;ddMMyy&quot;}.Select(x=&gt;DateTime.TryParseExact(s,x,null,0,out _)).ToList();
 </code></pre>
 <p>It takes a string as parameter and returns a list of 3 booleans corresponding to whether the string can be interpreted as {&quot;yyMMdd&quot;, &quot;MMddyy&quot;, &quot;ddMMyy&quot;}, in that order. I added <code>ToList()</code> because <code>Select()</code> returns an <code>IEnumerable</code> that is not computed.<br />
@@ -51,7 +72,7 @@ Because a year on 2 digits is ambiguous, <code>DateTime.Parse()</code> (and simi
 Note that due to TIO limitations (old version of C#/.NET), I added the required usings (but I didn't include them in the bytes count).<br />
 The program takes the first command line argument, and doesn't return the values but prints them to standard output instead.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(new Date(4+[2,0,8].map(q=&gt;s[i=(p^q)%6]+s[i+1]))+0)[8]==s[i])
 </code></pre>
@@ -80,7 +101,7 @@ The program takes the first command line argument, and doesn't return the values
 </code></pre>
 <p><a href="https://tio.run/##fZZdbptAFIXfs4qRJcczMiGeO7Zr0uA8tRvIo@soxMGUihibwUhW064gUl/62O6j68kGugR3hqaVCT4DEiA@zv0ZzrX5FFWRXhTpujxb5ffxfhnudTidkTf2JnP/IVrzdTjlSbgJp1XY177e3umy4Hx9sxHdsUfi8TERt7eXUp1S0OfVGV2pm69VNziVFwkn0R1eSjFN@ESIfRFvtmkR885Sd4RfxNH9@zSLr3erBR8Iv8yvyyJdJVz4ep2lJe98WJnHlnnxLlp85CYrC6fs8wljWVyyGdMe830/YnMWMgNfROesfy4885DdilgbuORavDV3FvlK51nsZ3nCjdjA@uDHVVzsOK88lgqbomJhyHg0S@f2olMW27gjBLtivd@/vj3/@G6OPXbBes8/n3om8BexH9QbY8so03HzdFIjiVkQQCYdMaWNaUtjxxhhphw6RTifo05y1EmOOokmDmbyPUS7u2MxFc6nBi6Ga1HKxeC6SGlrOa6ThGMahmJKh5ekw0vS4SXZ8NJLSfb0F8nGvQYiiBRWHfT2Gh2U@AoRrpBwhYceaiGYS@FcCudSyoFgy8MDh7SQRKoRzjWCuRqOayGsgi9FHlmof5aSqi37z4ZYpyTWKfxTIoej8RvEggBanxzjRI5xIsc4ER4nwuNEeJwMQj4mPGmEJ43wpBGeNIKTJsnuGCmIgPtrhHOBviwCfdkikOlqJjFDhjRsiGMq6WI4Jja5bQ6ZznYHdQqb1Xbe1tVLFgT4M8IwQp8RQdB4rW0mHQz87dVMIQaX5Q8" rel="nofollow noreferrer">Modifying Arnauld's also result 88, with <code>maybe</code> be <code>false</code></a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 58 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 58 bytes</h1>
 <pre><code>Ｆ¹⁰⁰Ｆ¹²Ｆ⎇⊖κ⁺²⁸¬﹪ι⁴⁻³¹﹪﹪κ⁷¦²⊞υ⟦ι⊕κ⊕λ⟧⭆⪪⭆”)∨^⍘”§⪪θ²Ｉι⁶№υＩ⪪ι²
 </code></pre>
 <p><a href="https://tio.run/##VU67bsMwDNz7FYQnClABWQn6gKegXTI4MJBsRQfBVmMhqpTKUpB@vcrEGtyB4B3veGQ/qtB7ZXP@8gGwFoLBjGQBBx2cCr/4rvugv7WLesAT49DZNKF84bDzEVs/JOvRcFgzRmJrHKmrmtCslHbi8EyyJBODLk0jJg4ftLZ1/9OX3LJP1jx0wbiI@0jt2Koz7s/WLHklaimpalFx2MStG/S1mH5uFzm8qSmiuf/3dKM@UWAq89lpym@syVm@CinX@fFi/wA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs three <code>0</code>s or <code>1</code>s depending on whether the input is in <code>YYMMDD</code>, <code>MMDDYY</code> or <code>DDMMYY</code> respectively. Explanation: Inspired by @KevinCruijssen's 05AB1E answer.</p>
@@ -99,27 +120,6 @@ The program takes the first command line argument, and doesn't return the values
 <pre><code>⭆⪪⭆”)∨^⍘”§⪪θ²Ｉι⁶№υＩ⪪ι²
 </code></pre>
 <p>Use the compressed string <code>012201210</code> to rearrange the input from <code>YYMMDD</code>, <code>MMDDYY</code> or <code>DDMMYY</code> into <code>YYMMDD</code>, then split each arrangement into a triplet and check whether they are in the list.</p>
-</div>
-<div id="pu3" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
-<pre><code>m=require('moment')
-f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
-</code></pre>
-<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
-<p>Sorry no TIO, don't know how to import <code>momentjs</code> there. Only ran full tests in the browser + Google Apps Script (V8). The snippet below imports <code>momentjs</code> by fetch and eval.</p>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>m = moment
-
-f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
-
-document.write(f('00', '01', '01') + '&lt;br /&gt;')
-document.write(f('01', '01', '31') + '&lt;br /&gt;')
-document.write(f('31', '01', '01') + '&lt;br /&gt;')
-document.write(f('01', '02', '29') + '&lt;br /&gt;')</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"&gt;&lt;/script&gt;</code></pre>
-</div>
-</div>
-</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 134 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;time&quot;
