--- a/q/275350.html
+++ b/q/275350.html
@@ -41,12 +41,12 @@
 </code></pre>
 <p><a href="https://tio.run/##FYzBDoIwEAXvfEUPmHRt0cARXPgQQgJBsFqyNUAaCOCv13KaOcx7n8Y2Uzu@v3NE5tk51yMnuWBCUqHGfL0IofddlesdtdRVobiGVEuLisckV1wAMI8iKvpzd41@i1SlrVBBal1vRj50MyOGLKbM8@ElOU0IYFvAWGtoMkN3G8yL1w0PNzrA1@Hm/@CoIQsO9wc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <hr />
-<h3>Limited recursion, 80 bytes</h3>
+<h3>Limited recursion, 77 bytes</h3>
 <p>This version can reach <span class="math-container">\$a(19)\$</span> within TIO's time limit.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=y=&gt;{for(k=1n;y%++k||h[y/=k,k];);v=k})=&gt;h(x)||--n?f(n,x*-~x,h[v]=h):v
+<pre class="lang-javascript prettyprint-override"><code>f=(n,x=2n,h=y=&gt;{for(v=1n;y%++v||h[y/=v,v];);})=&gt;h(x)||--n?f(n,x*-~x,h[v]=h):v
 </code></pre>
-<p><a href="https://tio.run/##FcxLDoMgGATgvadgYRMo0IfL0t8exJhorJYWA40aogF6dYqrmcXM92ltO3fT@7twbZ59jANgzVYoNJOwQekGM2EFVy22A6XKe1ltZ1BM1YIICyoQKCVeifec68ewf4/8tzJZ2Rokudm4A2O/II0AJSblHRWXvVBKkMsQ6oyezdifRvPCTYtzpwNJ49wljoSGiCzEPw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FYzLDoMgFAX3fgULm3AL9OGy9NoPMSYaq6WNgUYN0QD9dYqrM4sz82ltO3fT@7sIbZ59jANSzVcsNFe4YekGM1GLVy23A2PWe1VtZ7Tc1hJkACwVXcF7IfRj2MWj@K1cVbZGBTcbd3vsF6IJktRIeyfFZQfGgLiMkM7o2Yz9aTQv2rQ0dzpAOucu5SA0ILMQ/w" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
 <pre><code>≔¹ηＦＮ«≧×⊕ηη⊞υ²Ｗ﹪ηΠυ⊞υ⊕⊟υ»Ｉυ
